Name:                obutils
Version:             0.1.1
Synopsis:            Misc utility functions
License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@openbrain.org
homepage:            https://github.com/openbrainsrc/obutils
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   Exposed-modules:    OpenBrain.Utils,
                       OpenBrain.CSV
   Build-depends:
        base            >= 4.6 && < 5
      , process
      , directory
      , cassava         >= 0.4
      , bytestring
      , mtl
      , vector
      , unordered-containers
      , time
      , old-locale
      , text